--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>LbShop</title>
@@ -7,10 +8,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </style>
 </head>
+
 <body>
   <app-root>Loading...</app-root>
+
+  <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDo1_LTrFIec_OtXL0DVEyKb7xWK8xUDHQ",
+    authDomain: "lb-shop-83664.firebaseapp.com",
+    databaseURL: "https://lb-shop-83664.firebaseio.com",
+    storageBucket: "lb-shop-83664.appspot.com",
+    messagingSenderId: "176056224462"
+  };
+  firebase.initializeApp(config);
+</script>
 </body>
+
 </html>
