--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <root>Loading...</root>
 
   <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
